<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/phoneDetailLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <ImageView
            android:layout_weight="2"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/all_in_one"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/roboto_regular"
            android:text="Add Device"
            android:textColor="#1FBAD6"
            android:textSize="24sp" />

        <androidx.cardview.widget.CardView
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="4"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="32dp"
            android:layout_marginBottom="40dp"
            app:cardBackgroundColor="@color/cardBackGround"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                >
                <TextView
                    android:layout_marginTop="32dp"
                    android:layout_width="match_parent"
                    android:text="Device Id"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/bg_white"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:paddingStart="4dp"
                    android:paddingTop="0dp"
                    android:layout_marginTop="4dp"
                    android:paddingEnd="4dp"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/hint_device_id"
                    android:id="@+id/deviceId"

                    />

                <TextView
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:text="Wifi Name"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/bg_white"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:layout_marginTop="4dp"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/hint_device_wifi_name"
                    android:id="@+id/device_wifi_name"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:paddingTop="0dp"
                    android:fontFamily="@font/roboto_regular"
                    />

                <TextView
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:text="Wifi Password"
                    android:textStyle="bold"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/bg_white"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/hint_device_wifi_pwd"
                    android:id="@+id/device_wifi_pwd"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:paddingTop="0dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/roboto_regular"

                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corners"
                    android:textColor="@color/bg_white"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:layout_margin="16dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/proceedBtn"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:id="@+id/proceedButton"/>
                <Button
                    android:layout_marginTop="16dp"
                    android:layout_width="wrap_content"
                    android:text="@string/close"
                    android:id="@+id/closeButton"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:background="@color/cardBackGround"
                    android:layout_gravity="right"
                    android:textColor="@color/sky"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
